Add new html and css of javascript

--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
 </head>
 <body>
     <script src="calculator.js" defer></script>
-    <div class="calculator"></div>
+    <div class="calculator">
+        <div class="display"></div>
+        <div class="buttons">
+            <button id="buttonOne">1</button>
+            <button id="buttonTwo">2</button>
+            <button id="buttonThree">3</button>
+            <button id="buttonAdd">+</button>
+            <button id="buttonFour">4</button>
+            <button id="buttonFive">5</button>
+            <button id="buttonSix">6</button>
+            <button id="buttonSub">-</button>
+            <button id="buttonSev">7</button>
+            <button id="buttonEight">8</button>
+            <button id="buttonNine">9</button>
+            <button id="buttonMul">*</button>
+            <button id="buttonClear">C</button>
+            <button id="buttonZero">0</button>
+            <button id="buttonEql">=</button>
+            <button id="buttonDiv">/</button>
+        </div>
+    </div>
 </body>
 </html>
